initial corrections to problem statement and goals

--- a/docs/ProblemStatementAndGoals/Team1_ProblemStatement & Goals.tex
+++ b/docs/ProblemStatementAndGoals/Team1_ProblemStatement & Goals.tex
@@ -27,7 +27,7 @@
         \toprule
         \textbf{Date}  & \textbf{Developer(s)} & \textbf{Change}       \\
         \midrule
-        September 26th &    N/A   & Initial documentation \\
+        September 26th &    Back End Developers   & Initial documentation \\
         \bottomrule
     \end{tabularx}
 \end{table}
@@ -42,7 +42,7 @@ Dr. Luciana Macedo investigates treatment strategies for older adults with  lumb
 
 Since Dr. Macedo's EMA work is focused on analyzing the daily activities and symptoms of mostly-older adults with mobility issues, her solution needs to capture their slow and subtle movements. In order to accomplish this, she and her students have attempted to use various smart-watch-esque activity tracking devices along with various software applications to prompt their patients with questions. However, they have been frustrated with very limited success.\\
 
-Their current system works on a time-based prompt-system, asking questions at regular intervals throughout the day. This is not as useful, as they are rather interested in the experiences of their patients when certain events or triggers happen. In addition, all of her data collection methods are heavily segregated and inefficient. In order to report their symptoms, a patient must input their answers into a smart watch, a mobile app, a website, etc. According to Dr. Macedo, this is not quite user-friendly especially when it comes to a group of older adult patients, and incredibly annoying and difficult for a researcher to analyze the gathered data. Importantly, the existing commercial products are designed to capture the activities of healthy and active people, which contrasts with what she is trying to caputre: shuffling, limping, slower walking, etc.\\
+Their current system works on a time-based prompt-system, asking questions at regular intervals throughout the day. This is not as useful, as they are rather interested in the experiences of their patients when certain events or triggers happen. In addition, all of her data collection methods are heavily segregated and inefficient. In order to report their symptoms, a patient must input their answers into a smart watch, a mobile app, a website, etc. According to Dr. Macedo, this is not quite user-friendly especially when it comes to a group of older adult patients, and incredibly annoying and difficult for a researcher to analyze the gathered data. Importantly, the existing commercial products are designed to capture the activities of healthy and active people, which contrasts with what she is trying to capture: shuffling, limping, slower walking, etc.\\
 
 \pagebreak
 
@@ -75,7 +75,7 @@ Covered in the Development Plan document.
 Constraints include all the numbers included are average and are subject to change:
 \begin{itemize}
     \item Safety: The device will be safe to use.
-    \item Weight: 60 grams. The device will be lightweight, so that it's portable and doesn't impact user's daily activities.
+    \item Weight: 100 grams. The device will be lightweight, so that it's portable and doesn't impact user's daily activities.
     \item Dimensions: 40mm long, and 34mm wide with a depth of 10.4 mm. A device of specified dimensions are very ergonomic and comfortable to wear.
     \item Accurate timing: System is very sensitive to timing inaccuracies, no \linebreak expected delays between detection and reporting.
     \item Battery Life: The device will be operable for a minimum of 7 days without having to charge or replace the battery, as this is the standard length for one EMA evaluation session.
