--- a/docs/ProblemStatementAndGoals/Team1_ProblemStatement & Goals.tex
+++ b/docs/ProblemStatementAndGoals/Team1_ProblemStatement & Goals.tex
@@ -72,13 +72,13 @@ Dr. Luciana Macedo of School of Rehabilitation Science at McMaster University.
 Covered in the Development Plan document.
 
 \subsection{Constraints}
-Constraints include all the numbers included are average and are subject to change:
+The constraints contained within this section were given by Dr. Luciana Macedo's research team. However, they may be subject to change according to the needs of the project and final product.
 \begin{itemize}
-    \item Safety: The device will be safe to use.
+    \item Safety: The device will be safe to use, with a voltage limit of 5V, and with adequate power protection circuitry in place.
     \item Weight: 100 grams. The device will be lightweight, so that it's portable and doesn't impact user's daily activities.
     \item Dimensions: 40mm long, and 34mm wide with a depth of 10.4 mm. A device of specified dimensions are very ergonomic and comfortable to wear.
-    \item Accurate timing: System is very sensitive to timing inaccuracies, no \linebreak expected delays between detection and reporting.
-    \item Battery Life: The device will be operable for a minimum of 7 days without having to charge or replace the battery, as this is the standard length for one EMA evaluation session.
+    \item Accurate timing: System is very sensitive to timing inaccuracies, with no more than 1 minute of expected delay between detection and reporting.
+    \item Battery Life: The device will be operable for a minimum of 24 hours without having to charge the device's battery.
     \item 2 Week Data Retention: Storage for a minimum of two weeks of EMA data will be available within the device. This will provide the minimum amount of data storage necessary to enable EMA.
 \end{itemize}
 
@@ -93,7 +93,7 @@ Constraints include all the numbers included are average and are subject to chan
         Tacking Minor Movements                          & Most activity trackers make it difficult to track minor movements.
         They are generally created for highly mobile individuals such as athletes or similar. Since the target audience for this device will be older adults who have back and spinal problems; their movements will not be as pronounced as an athletes, for example. For this reason the tracker should have a good amount of sensitivity, so that minor movements are appropriately accounted for.                                                                                                                                                                                                                                                       \\
         \hline
-        Activity Based Prompting                            & The tracker should be able to prompt individuals when the activity monitoring system detects that a particular event has occurred, such as no movement after a period of movement.  Once prompted the individual will be asked to complete a Ecological Momentary Assessment (EMA) survey, in which they will be asked questions such as why they stopped moving, and if they are feeling any pain. Having a high visibile prompting system that includes audio and visual queues would be helpful in notifying participants that they should complete the EMA. This data will then be stored and used for further analysis. \\
+        Activity Based Prompting                            & The tracker should be able to prompt individuals when the activity monitoring system detects that a particular event has occurred, such as no movement after a period of movement.  Once prompted the individual will be asked to complete a Ecological Momentary Assessment (EMA) survey, in which they will be asked questions such as why they stopped moving, and if they are feeling any pain. Having a high visibile prompting system that includes visual queues would be helpful in notifying participants that they should complete the EMA. This data will then be stored and used for further analysis. \\
         \hline
         Highly \linebreak Simplistic User Interface and Hardware design & The user base for this product will be the older adult population, some of whom many not use smartphones or smart activity trackers. Therefore, it is essential that the design of the user interface and hardware be intuitive to a person without a lot of experience using smart technology. This also improves the likelihood that a user will fill out the survery successfully and quickly when prompted to do so.                                                                                                                                                                         \\
         \hline
