--- a/docs/VnVReport/VnVReport.tex
+++ b/docs/VnVReport/VnVReport.tex
@@ -17,10 +17,10 @@
 
 \begin{document}
 
-\title{Verification and Validation Report: \progname} 
+\title{Verification and Validation Report: \progname}
 \author{\authname}
 \date{\today}
-	
+
 \maketitle
 
 \pagenumbering{roman}
@@ -28,11 +28,11 @@
 \section{Revision History}
 
 \begin{tabularx}{\textwidth}{p{3cm}p{2cm}X}
-\toprule {\bf Date} & {\bf Version} & {\bf Notes}\\
-\midrule
-Date 1 & 1.0 & Notes\\
-Date 2 & 1.1 & Notes\\
-\bottomrule
+  \toprule {\bf Date} & {\bf Version} & {\bf Notes} \\
+  \midrule
+  Date 1              & 1.0           & Notes       \\
+  Date 2              & 1.1           & Notes       \\
+  \bottomrule
 \end{tabularx}
 
 ~\newpage
@@ -40,11 +40,11 @@ Date 2 & 1.1 & Notes\\
 \section{Symbols, Abbreviations and Acronyms}
 
 \renewcommand{\arraystretch}{1.2}
-\begin{tabular}{l l} 
-  \toprule		
-  \textbf{symbol} & \textbf{description}\\
-  \midrule 
-  T & Test\\
+\begin{tabular}{l l}
+  \toprule
+  \textbf{symbol} & \textbf{description} \\
+  \midrule
+  T               & Test                 \\
   \bottomrule
 \end{tabular}\\
 
@@ -65,16 +65,516 @@ Date 2 & 1.1 & Notes\\
 This document ...
 
 \section{Functional Requirements Evaluation}
+This tests were performed to ensure that the functional requirements were met and the results were noted.
+\subsection{Duration Test}
 
+The following tests were performed to check whether the device maintained an "ON" state throughout the duration of the monitoring period.
+\begin{enumerate}
+
+  \item{\textbf{DT\_1: Regular Inputs}\\}\label{DT1}
+
+  \textbf{Initial State}: Device waits for the monitoring period to be set up in the configuration of the device.
+
+  \textbf{Input}: Monitoring Period ["Date","Time"]  : ["03-11-2022", "05:30:PM"].
+
+  \textbf{Expected Results}: Device turns off after monitoring period.
+
+  \textbf{How test was performed}: The test was performed by passing in a valid monitoring period and ensuring that the device maintains power throughout this period.
+
+  \textbf{Observed Results}: The device can last for around 2 days with the current battery circuitry. Any monitoring period in lesser than 2 days had inputs being collected as seen in the serial logs.
+
+  \item{\textbf{DT\_2: Invalid Inputs}\\}\label{DT2}
+
+  \textbf{Initial State}: Device waits for the monitoring period to be set up in the configuration of the device.
+
+  \textbf{Input}: Monitoring period ["Date","Time"] : ["3rd November 2022", "Five Thirty PM"].
+
+  \textbf{Expected Results}: Device returns an error code to the error handler and asserts the Invalid Data Error (BED\_ERR\_INVALID\_DATA).
+
+  \textbf{How test was performed}: The test was performed by passing an invalid input and ensuring the appropriate error code with the description is returned.
+
+  \textbf{Observed Results}: When an unexpected input (wrong type) was passed, an error code with a very intuitive description (BED\_ERR\_INVALID\_DATA) showed up on the screen.
+
+  \item{\textbf{DT\_3: Earlier Date}\\}\label{DT3}
+
+  \textbf{Initial State}: Device waits for the monitoring period to be set up in the configuration of the device.
+
+  \textbf{Input}: Monitoring period ["Date","Time"] : ["01-1-1999", "05:30:PM"].
+
+  \textbf{Expected Results}: Device returns an error code to the error handler and asserts the Invalid Data Error (BED\_ERR\_INVALID\_DATA).
+
+  \textbf{How test was performed}: The test was performed by passing an older date than the current date for configuration.
+
+  \textbf{Observed Results}: When an older date was passed, an error code with a very intuitive description (BED\_ERR\_INVALID\_DATA) showed up on the screen.
+
+  \item{\textbf{DT\_4: Date Beyond Capabilities}\\}\label{DT4}
+
+  \textbf{Initial State}: Device waits for the monitoring period to be set up in the configuration of the device.
+
+  \textbf{Input}: Monitoring period ["Date","Time"] : ["9-12-2300", "05:30:PM"].
+
+  \textbf{Expected Results}: Device returns an error code to the error handler and asserts the Invalid Data Error (BED\_ERR\_INVALID\_DATA).
+
+  \textbf{How test was performed}: The test is performed by passing a date greater than what the battery life of the device can support.
+
+  \textbf{Observed Results}: When a date newer than the maximum date that can be stored was passed, an error code with a very intuitive description (BED\_ERR\_INVALID\_DATA) showed up on the screen.
+\end{enumerate}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{Device should track Minor Movements}
+The following tests were performed to analyze the device's sensitivity.
+\paragraph{Minor Tracking Test}
+\begin{enumerate}
+  \item{\textbf{MTT\_1: Regular Movement} \\}\label{MTT1}
+
+  \textbf{Initial State}: Device is worn with all systems working.
+
+  \textbf{Input}: Tester performs activities at a regular/normal pace.
+
+  \textbf{Expected Results}: The steps taken should be incremented everytime the volunteer walks.
+
+  \textbf{How test was performed}: The test was performed by attaching the sensor onto the volunteer's finger who walked as usual. This was done to ensure that the device can work under normal scenarios.\\
+
+  \textbf{Observed Results}: The steps were incrementing as expected and almost very accurate value of how many steps were logged in serial.
+
+  \item{\textbf{MTT\_2: Slow Movement} \\}\label{MTT2}
+
+  \textbf{Initial State}: Device is worn with all systems working.
+
+  \textbf{Input}: Tester performs activities at a very slow pace.
+
+  \textbf{Expected Results}: Sudden changes in heart rate would be detected and displayed.
+
+  \textbf{How test was performed}: The test was performed by attaching the sensor onto the volunteer's finger who walked as if he was limping. This was done to ensure that the device can work for people with limited mobility.\\
+
+  \textbf{Observed Results}: The steps were incrementing as expected and almost very accurate value of how many steps were logged in serial. Since they weren't above threshold, the device detected that the tracker were limping
+
+\end{enumerate}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{Prompt Tests}
+
+The following tests were done to ensure that the proper prompts were displayed to the user when desired stimuli were detected. Tests involve generating the default and specific prompts for different detections.
+
+\begin{enumerate}
+  \item{\textbf{PRT\_1: Test Prompt} \\}\label{PRT1}
+
+  \textbf{Initial State}: Device has just been reconfigured.
+
+  \textbf{Input}: Device is turned on for the first time.
+
+  \textbf{Expected Results}: Test Prompt is displayed.
+
+  \textbf{How test was performed}: The test was performed by turning on the device for the first time after reconfiguration. Upon turning on the device, there was a test prompt that confirmed that the prompting system was working correctly. The test prompt is the default prompt.
+
+  \textbf{Observed Results}: The default prompt showed up. When a desired activity was detected, a set of specific prompts were displayed, for which responses were recorded.\\\\
+  Test Prompt: Is this Device on?\\
+  Possible Answers: Yes or No
+  \item{\textbf{PRT\_2: Activity Prompt} \\}\label{PRT2}
+
+  \textbf{Initial State}: Device is in the idle state.
+
+  \textbf{Input}: Activity has been detected.
+
+  \textbf{Expected Results}: Specific activity prompt is displayed.
+
+  \textbf{How test was performed}: The test was done by having a volunteer perform one of the registered activities when the device was idle. This should result in a prompt for the volunteer that is generated based on the specific activity performed.
+
+  \textbf{Observed Results}: The device displayed the specific prompts as shown below.\\\\
+  Tracked Activity: Tester slows down or comes to a stop.\\
+  Activity Prompt: Are you in pain?\\
+  Possible Answers: Yes or No
+
+\end{enumerate}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsection{Customizable Thresholds}
+
+The following tests were done to ensure that the proper prompts were displayed to the user when activities are detected at configured thresholds. Tests involve generating the test prompt, generating prompts for different activities.
+
+\begin{enumerate}
+  \item{\textbf{TT\_1: Regular Inputs} \\}\label{TT1}
+
+  \textbf{Initial State}: Device is in Configuration mode.
+
+  \textbf{Input}: Regular values for thresholds within limits.
+
+  \textbf{Expected Results}: Config File generated successfully.
+
+  \textbf{How test was performed}: The test was performed by setting the device to configuration mode and then setting valid values for the thresholds.
+
+  \textbf{Observed Results}: The tester has the desired configuration thresholds for respective parameters. A config file was also created successfully. \\
+  Eg: \\
+  Speed Threshold:\\
+  Limits: 0m/s \textless Threshold \textless 5m/s
+
+  \item{\textbf{TT\_2: Below Lower Limit} \\}\label{TT2}
+
+  \textbf{Initial State}: Device is in Configuration mode.
+
+  \textbf{Input}: Values for thresholds below lower limits.
+
+  \textbf{Expected Results}: Config File generates a BED\_ERR\_OUT\_OF\_BOUNDS.
+
+  \textbf{How test was performed}: The test was performed by setting the device to configuration mode and then setting values for the thresholds above allowable limits.
+
+  \textbf{Observed Results}: Configuration file generated an error code for the specific parameter in the config file.
+
+  \item{\textbf{TT\_3: Above Upper limit }\\}\label{TT3}
+
+  \textbf{Initial State}: Device is in Configuration mode.
+
+  \textbf{Input}: Values for thresholds above upper limits.
+
+  \textbf{Expected Results}: Config File generates a BED\_ERR\_OUT\_OF\_BOUNDS.
+
+  \textbf{How test was performed}: The test was performed by setting the device to configuration mode and then setting values for the thresholds below allowable limits.
+
+  \textbf{Observed Results}: Configuration file generated an error code for the specific parameter in the config file.
+
+  \item{\textbf{TT\_4: Invalid Value} \\}\label{TT4}
+
+  \textbf{Initial State}: Device is in Configuration mode.
+
+  \textbf{Input}: Invalid values for thresholds.
+
+  \textbf{Expected Results}: Config File generates a BED\_ERR\_INVALID\_DATA.
+
+  \textbf{How test was performed}: The test was performed by setting the device to configuration mode and then setting invalid values for the thresholds.
+
+  \textbf{Observed Results}: Configuration file generated an error code for the specific parameter in the config file.
+
+  \item{\textbf{TT\_5: No Value} \\}\label{TT5}
+
+  \textbf{Initial State}: Device is in Configuration mode.
+
+  \textbf{Input}: No values for thresholds.
+
+  \textbf{Expected Results}: Config File generates a BED\_ERR\_INVALID\_DATA.
+
+  \textbf{How test was performed}: The test was performed by setting the device to configuration mode and then assigning no values for the thresholds.
+
+  \textbf{Observed Results}: Configuration file generated an error code for the specific parameter in the config file.
+\end{enumerate}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsection{Data Storage}
+
+The following tests were done to ensure that data is stored when necessary. Tests include checking when storage buffer was full, when prompts were generated and when sensor data needed to be logged.
+\begin{enumerate}
+  \item{\textbf{DST\_1: Storage Buffer Full} \\}\label{DST1}
+
+  \textbf{Initial State}: Device is in an idle state.
+
+  \textbf{Input}: Activity detected causing prompt to be generated (Internal storage is full).
+
+  \textbf{Expected Results}: Data Storage system generates a BED\_ERR\_MEMORY\_FULL
+
+  \textbf{How test was performed}: The test was performed by first loading the internal memory buffer with garbage values so that it was nearly/completely full. Then a registered activity was triggered, generating the prompts.
+
+  \textbf{Observed Results}:  Once the prompts were answered, the system did not have enough memory to store the new values thus resulting in the expected error code.
+
+
+  \item{\textbf{DST\_2: Prompt Generated} \\}\label{DST2}
+
+  \textbf{Initial State}: Device is in an idle state.
+
+  \textbf{Input}: Activity detected causing prompt to be generated.
+
+  \textbf{Expected Results}: Prompt Response is saved into the internal memory.
+
+  \textbf{How test was performed}: The test was executed by performing a registered activity and ensuring that the prompt generated is answered and its result is stored in the internal storage buffer.\\
+
+  \textbf{Observed Results}: The responses were saved in the internal memory which were later logged to check if they were stored correctly.\\
+  eg: Registered Activity: Participant slows down or comes to a stop for an extended period of time.\\
+  Prompt Generated: \\
+  Are you in pain?\\
+  Possible Answers: Yes or No\\
+  \\
+  Prompt Generated: \\
+  Do you need assistance?\\
+  Possible Answers: Yes or No\\
+
+  \item{\textbf{DST\_3: Sensor Storage} \\}\label{DST3}
+
+  \textbf{Initial State}: Device is in an idle state.
+
+  \textbf{Input}: Activity detected causing prompt to be generated.
+
+  \textbf{Expected Results}: Specific sensor values that triggered a prompt are stored in the internal memory.
+
+  \textbf{How test was performed}: The test was performed by performing a registered activity and ensuring that the sensor values that caused the prompt are stored in the internal storage buffer.
+
+  \textbf{Observed Results}: The raw sensor data values that triggered the prompts were stored along with the responses from the users.\\
+\end{enumerate}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsubsection{Data Extraction}
+
+The following tests were done to ensure that data can be extracted and presented in a graphical manner deemed acceptable for the purpose of EMA analysis.
+\begin{enumerate}
+  \item{\textbf{DXT\_1: Extracting Data} \\}\label{DXT1}
+
+  \textbf{Initial State}: Device is connected to the device manager.
+
+  \textbf{Input}: A command that tells the device manager to extract all data from the internal memory.
+
+  \textbf{Expected Results}: Extracted data is sent to the Host Software where it is stored in the database.
+
+  \textbf{How test was performed}: The test was performed by first running the device as intended and waiting for a small monitoring period to finish. After this the device was connected to the Host Software with the help of the Device Manager Driver. Once connected, the user can start the extraction process and should be able to see all the relevant data in a presentable manner.
+
+  \textbf{Observed Results}: The data was read in the host software and updated on the database.
+
+  \item{\textbf{DXT\_2: Extracting No Data} \\}\label{DXT2}
+
+  \textbf{Initial State}: Device is connected to the device manager.
+
+  \textbf{Input}: A command that tells the device manager to extract all data from the internal memory.
+
+  \textbf{Expected Results}: Device Manager returns a BED\_ERR\_EMPTY\_DATA error
+
+  \textbf{How test was performed}: The test was performed by first deleting all the contents of the internal memory prior to connection with the Host Software. Once connected and the extraction process began, data was attempted to be extracted.
+
+  \textbf{Observed Results}: There was an error code returned on the display.
+
+  \item{\textbf{DXT\_3: Extracting Corrupted Data} \\}\label{DXT3}
+
+  \textbf{Initial State}: Device is connected to the device manager.
+
+  \textbf{Input}: A command that tells the device manager to extract all data from the internal memory.
+
+  \textbf{Expected Results}: Device Manager returns a BED\_ERR\_INVALID\_DATA error
+
+  \textbf{How test was performed}: The test was performed by filling it with garbage values prior to connection with the Host Software. Once connected, the data was attempted to be extracted from the memory.
+
+  \textbf{Observed Results}: Since the data stored were garbage values and not the expected data types or limits, the device displayed an error.
+\end{enumerate}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Nonfunctional Requirements Evaluation}
+\subsection{Hardware Safety }
 
-\subsection{Usability}
-		
-\subsection{Performance}
+These tests were performed to test the safety of the device concerning electrical components and hardware. It is important that the users of the device are kept safe and that any systems in place to protect them from electrical shocks are functioning properly and that the indicator LED functions as expected under certain conditions.
 
-\subsection{etc.}
-	
-\section{Comparison to Existing Implementation}	
+\begin{enumerate}
+
+  \item{\textbf{HST\_1: High Voltage}}\label{HST1}
+
+  \textbf{Initial State}: Device begins in "off" mode.
+
+  \textbf{Input}: When the device is turned on, a voltage over expected voltage is applied.
+
+  \textbf{Expected Results}: Device detects high voltage and indicates that voltage is high using an indicator LED. The breaker or fuse then trips or the voltage is sent to ground.
+
+  Test Case Derivation: N/A
+
+  \textbf{How test was performed}: Use a power supply to oversupply the system with voltage.
+
+  \textbf{Observed Results}: Respective indicator lit up as expected to correspond to high voltage and fuse tripped to prevent electrocution
+
+  \item{\textbf{HST\_2: Normal Voltage}}\label{HST2}
+
+  \textbf{Initial State}: Device begins in "off" mode.
+
+  \textbf{Input}: When device is turned on a normal voltage is applied.
+
+  \textbf{Expected Results}: Device powers on, no issues are detected.
+
+  Test Case Derivation: N/A
+
+  \textbf{How test was performed}: The power supply will be used to provide the expected voltage to the device.
+
+  \textbf{Observed Results}: The device operated normally.
+
+  \item{\textbf{HST\_3: Low Voltage}}\label{HST3}
+
+  \textbf{Initial State}: Device begins in "off" mode.
+
+  \textbf{Input}: When device is turned on a voltage below the expected amount is applied.
+
+  \textbf{Expected Results}: If device powers on, indicator LED indicates that the voltage is lower than expected, device goes into power saving mode.
+
+  Test Case Derivation:
+
+  \textbf{How test was performed}: Use power supply to provide a lower than expected voltage to the device.
+
+  \textbf{Observed Results}: As expected, respective LED was lit to indicate low voltage.
+
+  \item{\textbf{HST\_4: Frequency Detection}}\label{HST4}
+
+  \textbf{Initial State}: Device begins in off mode
+
+  \textbf{Input}: Device is turned on in normal operating state
+
+  \textbf{Expected Results}: Frequency analysis conducted on the circuitry components
+
+  Test Case Derivation: N/A
+
+  \textbf{How test was performed}: Using a frequency analysis software such as NI Multisim and an Oscilloscope, graphs will be generated for different components of the hardware to determine normal operating frequency compared to industry standards.
+
+  \textbf{Observed Results}: Based on the graphs generated by Multisim, we were able to determine that frequencies were detected and had expected values.
+
+\end{enumerate}
+
+\subsection{Re-usability}
+
+These tests basically evaluated the re-usability of various hardware systems of the device. The device should be reusable by multiple participants to prevent electronic waste and reduce cost for the researchers.
+
+\begin{enumerate}
+
+  %add another test or gear test toward charge protection, circuitry to stop overcharging/discharging.
+
+  \item{\textbf{RT\_1: Battery Charge/Discharge}}\label{RT1}
+
+  \textbf{Initial State}: Battery is fully discharged.
+
+  \textbf{Input}: Connect battery to the charging cable.
+
+  \textbf{Expected Results}: Battery is fully charged without issue.
+
+  Test Case Derivation: N/A
+
+  \textbf{How test was performed}: Battery component was isolated from device and fully charged and discharged couple times.
+
+  \textbf{Observed Results}: Battery was fully charged and device was safe to use.
+
+  \item{\textbf{RT\_1: Battery Charge Protection}}\label{RT1}
+
+  \textbf{Initial State}: Battery is fully charged.
+
+  \textbf{Input}: Connect battery to the charging cable.
+
+  \textbf{Expected Results}: Battery will not overcharge.
+
+  Test Case Derivation: N/A
+
+  \textbf{How test was performed}: Battery component was isolated from device and fully charged, then it wasn't unplugged and left around for couple minutes .
+
+  \textbf{Observed Results}: Battery was not being overcharged nor did it heat up, thus device was safe to use.
+
+\end{enumerate}
+
+\subsection{Accuracy}
+The following set of tests were executed to ensure that the device can recognize its state and perform its main functionality in accurate manner, based on the state.
+The following functional requirements test cases are applicable for accuracy:
+
+\begin{itemize}
+  \item MTT\_1: \hyperref[MTT1]{Regular Movement}
+  \item MTT\_2: \hyperref[MTT2]{Slow Movement}
+  \item PRT\_1: \hyperref[PRT1]{Test Prompt}
+  \item PRT\_2: \hyperref[PRT2]{Activity Prompt}
+\end{itemize}
+
+\subsubsection{Usability}
+The following set of tests were done to ensure that the device is usable by target user population is not problematic in terms of maintenance and user interactions.
+\begin{enumerate}
+
+  \item\textbf{{UT\_1: Intuitive UI\\}}\label{UT1}
+
+  \textbf{Initial State}: The device is turned on and a question prompt is generated on screen.
+
+  \textbf{Input}: Testers are asked to answer the questionnaire set without assistance in less than 1 minute.
+
+  \textbf{Expected Results}: All testers are able to answer their prompt successfully.
+
+  \textbf{How test was performed}: A test group of people with age of 40 or older was be asked to receive a powered-on EMAnator and asked to respond to a set of 3 questions in 1 minute. These questions were randomly selected from the following 10 questions.
+
+  \begin{itemize}
+    \item Are you a dog person or a cat person?
+    \item Are you currently inside of a building?
+    \item Are you currently a student?
+    \item Did you make your bed this morning?
+    \item Do you feel tired right now?
+    \item Do you prefer coffee or tea?
+    \item Do you have a G driver's license?
+    \item Do you feel sleepy right now?
+    \item Which is better: Summer vs Winter
+    \item Is it daytime right now?
+  \end{itemize}
+
+  \textbf{Observed Results}: The UI was very intuitive and user-friendly. Volunteers were able to navigate through and answer propmpts with ease.
+
+  \item\textbf{{UT\_2: Comfortable Device\\}}\label{UT2}
+
+  \textbf{Initial State}: The device is turned on and left on idle mode.
+
+  \textbf{Input}: Testers are asked to wear the device for 24 hours.
+
+  \textbf{Expected Results}: Testers fill out a survey form regarding the comfort of the device on their body.
+
+  \textbf{How test was performed}: At the end of their 1 day cycle, testers will be asked to fill out an online form indicating how comfortable they felt the device was regards to weight, shape, stability, etc. The following questions will be asked.
+
+  \begin{itemize}
+    \item Did the device every fall off? If so, please record the following for each case: What you were doing each time? When did the incident happen?
+    \item How do you feel regarding the weight of the device? Was it too heavy or too light?
+    \item How do you feel regarding the texture of the device? Did you find it uncomfortable in any way?
+  \end{itemize}
+
+  \textbf{Observed Results}: Testers filled out a survey and the responses were mostly positive.
+
+  \item\textbf{{UT\_3: Reusability\\}}\label{UT3}
+
+  \textbf{Initial State}: The device is cleaned using isopropyl alcohol wipes.
+
+  \textbf{Input}: Testers visually inspect how clean the device is.
+
+  \textbf{Expected Results}: The device is deemed clean and the device is not harmed.
+
+  \textbf{How test was performed}: A member of Back End Developers cleaned the device, which was later inspected for safety and usage to check if the device turned on and functioned normally.
+
+  \textbf{Observed Results}: The device was functionally as normal despite being cleaned after usage.
+
+\end{enumerate}
+
+\subsubsection{Performance}
+The following set of questions was asked to ensure that the device was capable of meeting user expectations.
+\begin{enumerate}
+  \item\textbf{{PT\_1: Data Transfer Time\\}}\label{PT1}
+
+  \textbf{Initial State}: The device has collected a complete set of data.
+
+  \textbf{Input}: The device is connected to the host software and connection is established for data transfer.
+
+  \textbf{Expected Results}: Data transfer to finish within the specified parameter, TRANSFER\_TIME.
+
+  \textbf{How test was performed}: 2 group members of the Back End Developers performed seperate data transfer tests 3 times and recorded the total transfer time for each execution. All 6 tests should result in execution time less than or equal to TRANSFER\_TIME.
+
+  \textbf{Observed Results}: The data was transferred within the specified parameter, thus indicating device performed well in terms of transfer rates.
+
+  \item\textbf{{PT\_2: Battery Life\\}}\label{PT2}
+
+  \textbf{Initial State}: The device is turned on and left on idle mode.
+
+  \textbf{Input}: Testers wear the device for standard monitoring period.
+
+  \textbf{Expected Results}: The total amount of time before the device runs out of battery is greater or equal to the parameter, BATTERY\_LIFE.
+
+  \textbf{How test was performed}: 2 group members of the Back End Developers wore the device for standard monitoring period consecutively in their daily basis. At the end of each calendar day, they are prompted to record their response to a simple question: "Does the device still have battery life left? If so, how much percentage?".
+
+  \textbf{Observed Results}: The group members answered the prompt, thus giving us the time limit on the batteries. It was greater than the parameter set.
+
+\end{enumerate}
+
+\subsubsection{Data Security Tests}
+
+These tests were designed to test the security of the system and the accessibility of important medical records. This is important to protect the user's privacy by avoiding it to fall in the wrong hands. Thus only authorised users can access the data.
+
+\begin{enumerate}
+
+  \item{\textbf{DSQT\_1: Records Safety Test}}\label{DSQT1}
+
+  \textbf{Initial State}: Device is powered on.
+
+  \textbf{Input}: Data transfer cable is plugged in from device to a generic PC, a volunteer tries to access the database and modify the data within.
+
+  \textbf{Expected Results}: Database inaccessible and requests an administrative security key. The volunteer should be unable to access or modify the data.
+
+  Test Case Derivation: N/A
+
+  \textbf{How test was performed}: Device was given to a volunteer with required technical skills who did not have the administrator security key. They attempted to access the database.
+
+  \textbf{Observed Results}: Databases couldn't be accessed and was prompting for a security key, implying the database is safe.
+
+\end{enumerate}
+
+\section{Comparison to Existing Implementation}
 
 This section will not be appropriate for every project.
 
@@ -83,10 +583,10 @@ This section will not be appropriate for every project.
 \section{Changes Due to Testing}
 
 \section{Automated Testing}
-		
+
 \section{Trace to Requirements}
-		
-\section{Trace to Modules}		
+
+\section{Trace to Modules}
 
 \section{Code Coverage Metrics}
 
@@ -101,13 +601,13 @@ graduate attribute of Reflection.  Please answer the following question:
 
 \begin{enumerate}
   \item In what ways was the Verification and Validation (VnV) Plan different
-  from the activities that were actually conducted for VnV?  If there were
-  differences, what changes required the modification in the plan?  Why did
-  these changes occur?  Would you be able to anticipate these changes in future
-  projects?  If there weren't any differences, how was your team able to clearly
-  predict a feasible amount of effort and the right tasks needed to build the
-  evidence that demonstrates the required quality?  (It is expected that most
-  teams will have had to deviate from their original VnV Plan.)
+        from the activities that were actually conducted for VnV?  If there were
+        differences, what changes required the modification in the plan?  Why did
+        these changes occur?  Would you be able to anticipate these changes in future
+        projects?  If there weren't any differences, how was your team able to clearly
+        predict a feasible amount of effort and the right tasks needed to build the
+        evidence that demonstrates the required quality?  (It is expected that most
+        teams will have had to deviate from their original VnV Plan.)
 \end{enumerate}
 
 \end{document}
