--- a/docs/ProblemStatementAndGoals/Team1_ProblemStatement & Goals.tex
+++ b/docs/ProblemStatementAndGoals/Team1_ProblemStatement & Goals.tex
@@ -4,6 +4,7 @@
 \usepackage{booktabs}
 \usepackage[letterpaper, portrait, margin=1in]{geometry}
 \usepackage{helvet}
+\usepackage{hyperref}
 \renewcommand{\familydefault}{\sfdefault}
 
 \title{Problem Statement and Goals\\\progname}
@@ -44,13 +45,20 @@ Since Dr. Macedo's EMA work is focused on analyzing the daily activities and sym
 
 Their current system works on a time-based prompt-system, asking questions at regular intervals throughout the day. This is not as useful, as they are rather interested in the experiences of their patients when certain events or triggers happen. In addition, all of her data collection methods are heavily segregated and inefficient. In order to report their symptoms, a patient must input their answers into a smart watch, a mobile app, a website, etc. According to Dr. Macedo, this is not quite user-friendly especially when it comes to a group of older adult patients, and incredibly annoying and difficult for a researcher to analyze the gathered data. Importantly, the existing commercial products are designed to capture the activities of healthy and active people, which contrasts with what she is trying to capture: shuffling, limping, slower walking, etc.\\
 
+The team at SReS requires a system which detects special (sometimes small-scale) movements from participants, relays prompts and information to participants based on said movements, and stores, analyzes, and displays movement data gathered throughout this process.\\
+
 \pagebreak
 
 \subsection{Inputs and Outputs}
 
 \textbf{[Inputs]}
 \begin{itemize}
-    \item Sensors will detect relevant patient movement.
+    \item Sensors will detect relevant patient movement. Examples include:
+	\begin{itemize}
+		\item Limping
+		\item Shuffling
+		\item Foot-dragging
+	\end{itemize}
     \item User responses to the survey for data collection.
 \end{itemize}
 
@@ -69,7 +77,7 @@ Dr. Luciana Macedo of School of Rehabilitation Science at McMaster University.
 
 \subsection{Environment}
 
-Covered in the Development Plan document.
+Covered in the \href{https://github.com/zakerl/Capstone_Project/blob/main/docs/DevelopmentPlan/DevelopmentPlan.pdf}{Development Plan document}.
 
 \subsection{Constraints}
 The constraints contained within this section were given by Dr. Luciana Macedo's research team. However, they may be subject to change according to the needs of the project and final product.
@@ -79,7 +87,7 @@ The constraints contained within this section were given by Dr. Luciana Macedo's
     \item Dimensions: 40mm long, and 34mm wide with a depth of 10.4 mm. A device of specified dimensions are very ergonomic and comfortable to wear.
     \item Accurate timing: System is very sensitive to timing inaccuracies, with no more than 1 minute of expected delay between detection and reporting.
     \item Battery Life: The device will be operable for a minimum of 24 hours without having to charge the device's battery.
-    \item 2 Week Data Retention: Storage for a minimum of two weeks of EMA data will be available within the device. This will provide the minimum amount of data storage necessary to enable EMA.
+    \item Data Retention for Period of EMA Study: Necessary storage for one EMA period's worth of data will be available within the device. This will provide the minimum amount of data storage necessary to enable EMA.
 \end{itemize}
 
 \pagebreak
